# optimization-lol-predictor

./: pyproject.toml
notebooks/: approx.ipynb  final.ipynb  final_1.ipynb  main.ipynb  sto.ipynb  stochastic.ipynb  train_agd.ipynb  train_sgd.ipynb
